# rustv

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: check.yml  test.yml
config/: local.yml
migrations/: 20250804202454_create_users_table.sql  20250824204322_create_reviews_table.sql  20250824204337_create_watchlist_table.sql  20250824204402_create_watched_movies_table.sql  20250825182859_create_movies_table.sql  20251014162730_add_available_movie_flag.sql  20251130173743_change_director_to_prod_company.sql  20251130182000_tmdb_movie_table.sql  20251207000649_change_available_status_to_state.sql
scripts/: seed_db.rs
src/: app.rs  args.rs  lib.rs  main.rs
src/auth/: login.rs  mod.rs  protected.rs
src/clients/: tmdb.rs
src/common/: config.rs  logging.rs
src/handlers/: admin.rs  errors.rs  metrics.rs  mod.rs  movies.rs  profile.rs  torrent.rs  watchlist.rs
src/models/: imdb_stuff.rs  mod.rs  movie.rs  users.rs
src/repositories/: mod.rs  movies.rs  users.rs  watchlist.rs
src/services/: converter.rs  metrics.rs  mod.rs  movie_manager.rs  movies.rs  streaming.rs  torrent.rs  watchlist.rs
src/services/storage/: mod.rs  naive.rs  s3.rs
src/shared/: args.rs  config.rs  error.rs  logging.rs  middleware.rs  mod.rs  test_utils.rs
src/users/: users.rs
src/views/: errors.rs  mod.rs  movie.rs  pages.rs  profile.rs  watchlist.rs
static/js/: player-controls.js
templates/: _footer.html  _layout.css  _layout.html  error.html  frontpage.html  list.html  login.html  movie_details.html  player.html  profile.html  protected.html  ratings.html  register.html  requested_movies.html  search.html  steal_movies.html  watched_movies.html  watchlist.html
templates/admin/: console.html
templates/admin/torrents/: search.html
tests/: http_auth_middleware_tests.rs  movie_handlers_tests.rs  movie_repository_tests.rs  movie_service_tests.rs  torrent_tests.rs  user_repository_tests.rs  watchlist_handlers_tests.rs  watchlist_repository_tests.rs  watchlist_service_tests.rs
tests/common/: client.rs  fixtures.rs  mod.rs
