[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "rustv-backend"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rustv-backend"
path = "src/main.rs"

[[bin]]
name = "seed_db"
path = "scripts/seed_db.rs"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
askama = { version = "0.14" }
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-messages = "0.8.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
config = "0.15.13"
dotenv = "0.15.0"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["cookies", "json"] }
serde = "1.0.219"
serde-aux = "4.7.0"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
sqlx-sqlite = "0.8.6"
thiserror = "2.0.12"
time = { version = "0.3.43", features = ["formatting"] }
tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread", "test-util", "signal"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }


