[package]

name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "rustv-backend"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rustv-backend"
path = "src/main.rs"

[features]
default = []
fs = []
s3 = ["aws-config", "aws-sdk-s3"]
integration-tests = []


[[bin]]
name = "seed_db"
path = "scripts/seed_db.rs"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
askama = { version = "0.14" }
async-trait = "0.1.88"
aws-config = { version = "1.8.15", optional = true }
aws-sdk-s3 = { version = "1.129.0", optional = true }
axum = { version = "0.8.4", features = ["macros"] }
axum-messages = "0.8.0"
axum_csrf = { version = "0.11.0", features = ["layer"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
config = "0.15.13"
dotenv = "0.15.0"
ffmpeg-next = "8.0.0"
futures = { version = "0.3.31", features = ["alloc"] }
human_bytes = "0.4.3"
librqbit = "8.1.1"
quick-xml = { version = "0.38.3", features = ["serialize"] }
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.22", features = ["cookies", "json"] }
rust_ffmpeg = "1.0.0"
serde = "1.0.219"
serde-aux = "4.7.0"
serde_json = "1.0.143"
snafu = "0.8.9"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "json"] }
sqlx-sqlite = "0.8.6"
thiserror = "2.0.12"
time = { version = "0.3.43", features = ["formatting"] }
tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread", "test-util", "signal", "io-util"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }


[dev-dependencies]
futures = "0.3.31"
rmp-serde = "1.3"



[dev-dependencies.backend]
path = "."
features = ["integration-tests"]
